syntax = "proto3";

package agent;

import "common/details.proto";
import "common/entities.proto";
import "common/metadata.proto";
import "google/protobuf/struct.proto";

option go_package = "github.com/compozy/compozy/pkg/pb/agent";

enum AgentStatus {
  AGENT_STATUS_UNSPECIFIED = 0;
  AGENT_STATUS_RUNNING = 1;
  AGENT_STATUS_SUCCESS = 2;
  AGENT_STATUS_FAILED = 3;
}

// -----------------------------------------------------------------------------
// Agent Execution Started Event
// -----------------------------------------------------------------------------

message AgentExecutionStartedEvent {
  common.Metadata metadata = 1;
  common.WorkflowInfo workflow = 2;
  common.TaskInfo task = 3;
  common.AgentInfo agent = 4;

  message Details {
    AgentStatus status = 1;
  }
  Details details = 5;
}

// -----------------------------------------------------------------------------
// Agent Execution Success Event
// -----------------------------------------------------------------------------

message AgentExecutionSuccessEvent {
  common.Metadata metadata = 1;
  common.WorkflowInfo workflow = 2;
  common.TaskInfo task = 3;
  common.AgentInfo agent = 4;

  message Details {
    AgentStatus status = 1;
    google.protobuf.Struct result = 2;
    int64 duration_ms = 3;
  }
  Details details = 5;
}

// -----------------------------------------------------------------------------
// Agent Execution Failed Event
// -----------------------------------------------------------------------------

message AgentExecutionFailedEvent {
  common.Metadata metadata = 1;
  common.WorkflowInfo workflow = 2;
  common.TaskInfo task = 3;
  common.AgentInfo agent = 4;

  message Details {
    AgentStatus status = 1;
    common.ErrorResult error = 2;
    int64 duration_ms = 3;
  }
  Details details = 5;
}
